# constdb

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs
src/constdb/: constdb.rs  db.rs  engine.rs  errors.rs  ids.rs  mod.rs  modeling.rs  pk.rs  schema.rs  system_db.rs
src/constdb/api/: mod.rs
src/handlers/: database.rs  dml.rs  mod.rs  models.rs  table.rs
src/protos/: constdb_model.proto
src/utils/: fs.rs  mod.rs  proto_serde.rs
