[package]
name = "constdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.52"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.78"
warp = "0.3"
clap = { version = "3.0.7", features = ["derive"] }
rocksdb = "0.18.0"
