[package]
name = "constdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.73"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
clap = { version = "4.3.1", features = ["derive"] }
rocksdb = "0.21.0"
protobuf = "3.0.0-alpha.7"
protobuf-parse = "3.0.0-alpha.7"
axum = "0.6.18"
tower-http = {version = "0.4", features = ["normalize-path"] }
tower = "0.4"

[build-dependencies]
protobuf-codegen = "3.0.0-alpha.7"
protobuf = "3.0.0-alpha.7"
protobuf-parse = "3.0.0-alpha.7"
